# arkdecompiler

./: .gitignore  README.md  astgen.cpp  fundepscan.cpp  fundepscan.h  hot.sh
tests/: 9.hotcompile.ts
ui/: .gitignore  build-electron.bat  build-electron.sh  build-tauri.bat  build-tauri.sh  index.html  install-deps.bat  install-deps.sh  package-lock.json  package.json  quick-test.bat  quick-test.sh  refresh-icon-cache.bat  reinstall-electron-icon-fix.bat  tools.json  tsconfig.json  verify-electron-icon.bat
ui/.cargo/: config.toml
ui/public/: splash.html
ui/src-common/: App.tsx  main.tsx
ui/src-common/components/: FileExplorer.tsx  FunctionList.tsx  HexViewer.tsx  MainEditor.tsx  MenuBar.tsx  OutputPanel.tsx  SearchPanel.tsx  StatusBar.tsx  SymbolPanel.tsx  ToolConfigModal.tsx  Toolbar.tsx  XrefPanel.tsx
ui/src-common/icons/: icon.icns
ui/src-common/styles/: globals.css
ui/src-electron/: main.js  preload.js
ui/src-tauri/: Cargo.toml  build.rs  commands.rs  main.rs  tauri.conf.json
