[package]
name = "arkdecompiler"
version = "0.1.0"
description = "A cross-platform decompiler GUI application"
authors = ["you"]
edition = "2021"

[[bin]]
name = "arkdecompiler"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
